@@ -95,7 +95,6 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)
  * Add an extra confirmation prompt when deleting pages with a large number of child pages (Jaspreet Singh)
  * Adopt the slim header in page listing views, with buttons moved under the "Actions" dropdown (Paarth Agarwal)
- * Resolve multiple form submissions index listing page layout issues including title not being visible on mobile and interaction with large tables (Paarth Agarwal)
 
 ### Bug fixes
 
@@ -126,6 +125,8 @@ Wagtail’s page preview is now available in a side panel within the page editor
  * Make checkboxes visible in forced colors mode (Anuja Verma)
  * Display the correct color for icons in forced colors mode (Anuja Verma)
  * Remove outdated reference to 30-character limit on usernames in help text (minusf)
+ * Resolve multiple form submissions index listing page layout issues including title not being visible on mobile and interaction with large tables (Paarth Agarwal)
+ * Ensure ModelAdmin single selection lists show correctly with Django 4.0 form template changes (Coen van der Kamp)
 
 
 ## Upgrade considerations
